--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -30,9 +30,11 @@
                 <button type="submit" class="btn btn-primary w-100 py-1">Entrar</button>
                  {% if messages %}
                     {% for message in messages %}
-                        <div class="alert alert-danger mt-2" role="alert">
-                        {{ message }}
-                        </div>
+                        {% if message.tags == "error" %}
+                            <div class="alert alert-danger mt-2" role="alert">
+                                {{ message }}
+                            </div>
+                        {% endif %}
                     {% endfor %}
                 {% endif %}
             </form>
